Add new Lufthansa routes from EDDM
Added new routes for Lufthansa from EDDM, including seasonal and suspended routes.

--- a/index.html
+++ b/index.html
@@ -447,30 +447,133 @@
 
         ],
         ROUTES: [
-            { al: "Lufthansa", d: "EDDF", a: "EGLL", t: 1.5, ac: "A320L", fuel: "5.8t", s: "Active" },
-            { al: "Lufthansa", d: "EDDF", a: "KJFK", t: 8.5, ac: "B748", fuel: "98.5t", s: "Active" },
-            { al: "Lufthansa", d: "EDDM", a: "LFPG", t: 1.2, ac: "A320L", fuel: "4.9t", s: "Active" },
-            { al: "Lufthansa", d: "EDDF", a: "OMDB", t: 6.2, ac: "A320L", fuel: "16.5t", s: "Seasonal" }, 
-            { al: "Lufthansa", d: "EDDF", a: "KLAX", t: 11.5, ac: "B748", fuel: "135.2t", s: "Active" },
-            { al: "Swiss", d: "LSZH", a: "EGLL", t: 1.8, ac: "A223", fuel: "5.2t", s: "Active" },
-            { al: "Swiss", d: "LSZH", a: "WSSS", t: 12.0, ac: "B77W", fuel: "105.0t", s: "Suspended" },
-            { al: "Swiss", d: "LSZH", a: "KJFK", t: 8.8, ac: "A333", fuel: "58.0t", s: "Active" },
-            { al: "Austrian", d: "LOWW", a: "VTBS", t: 10.5, ac: "B789", fuel: "68.5t", s: "Seasonal" },
-            { al: "Austrian", d: "LOWW", a: "EGLL", t: 2.2, ac: "A320L", fuel: "7.1t", s: "Active" },
-            { al: "AirBaltic", d: "EVRA", a: "EDDL", t: 2.0, ac: "BCS3", fuel: "6.0t", s: "Active" },
-            { al: "AirBaltic", d: "EVRA", a: "EGLL", t: 2.5, ac: "BCS3", fuel: "7.2t", s: "Active" },
-            { al: "Eurowings", d: "EDDL", a: "LEPA", t: 2.2, ac: "A320E", fuel: "7.5t", s: "Seasonal" },
-            { al: "Eurowings", d: "EDDL", a: "EGLL", t: 1.2, ac: "A320E", fuel: "4.5t", s: "Active" },
-            { al: "Discover Airlines", d: "EDDF", a: "FIMP", t: 11.0, ac: "A333", fuel: "72.0t", s: "Seasonal" },
-            { al: "Discover Airlines", d: "EDDF", a: "MCO", t: 10.0, ac: "A333", fuel: "68.0t", s: "Active" },
-            { al: "Lufthansa Cargo", d: "EDDF", a: "VHHH", t: 11.5, ac: "B77W", fuel: "110.0t", s: "Active" },
-            { al: "ITA Airways", d: "LIRF", a: "KJFK", t: 9.0, ac: "A333", fuel: "62.0t", s: "Active" },
-            { al: "ITA Airways", d: "LIRF", a: "EGLL", t: 2.5, ac: "A320L", fuel: "8.0t", s: "Suspended" },
-            { al: "SAS", d: "EKCH", a: "KEWR", t: 8.5, ac: "A359", fuel: "60.0t", s: "Active" },
-            { al: "Finnair", d: "EFHK", a: "RJTT", t: 13.0, ac: "A359", fuel: "85.0t", s: "Suspended" },
-            { al: "Condor", d: "EDDF", a: "CUN", t: 11.0, ac: "A333", fuel: "75.0t", s: "Seasonal" },
-            { al: "Brussels Airlines", d: "EBBR", a: "KJFK", t: 8.0, ac: "A333", fuel: "55.0t", s: "Active" },
-            { al: "Edelweiss Air", d: "LSZH", a: "CPT", t: 11.5, ac: "A333", fuel: "78.0t", s: "Seasonal" }
+// --- Lufthansa EDDM  (Зеленые / Active) ---
+{ al: "Lufthansa", d: "EDDM", a: "LATI", t: 1.30, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EBBR", t: 1.07, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "SBGR", t: 11.20, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LBSF", t: 1.38, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "CYUL", t: 7.14, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "CYVR", t: 9.37, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "ZBAA", t: 9.01, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "ZSPD", t: 10.21, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LCLK", t: 3.09, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EKCH", t: 1.18, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "HECA", t: 3.29, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EFHK", t: 2.15, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EFKT", t: 3.07, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LFLL", t: 1.08, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LFLM", t: 1.04, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LFBO", t: 1.33, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "UGTB", t: 3.32, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDB", t: 1.00, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDW", t: 1.04, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDK", t: 1.00, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDL", t: 1.00, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDF", t: 1.00, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDH", t: 1.04, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDV", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EDDG", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LHBP", t: 1.00, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LGAV", t: 2.10, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "VOBL", t: 8.12, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "VIDP", t: 6.48, ac: "A380 - 800", fuel: "194.590t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "VABB", t: 7.52, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EIDW", t: 2.04, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LLBG", t: 3.32, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LIPY", t: 1.05, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LICC", t: 1.51, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LIRN", t: 1.25, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LICJ", t: 1.44, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LIRF", t: 1.16, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "RJBB", t: 10.40, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "RJTT", t: 10.47, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "ELLX", t: 1.00, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LMML", t: 2.02, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "MMMX", t: 11.16, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EHAM", t: 1.20, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "ENGM", t: 1.54, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EPGD", t: 1.19, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EPKK", t: 1.04, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EPPO", t: 1.01, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EPWA", t: 1.18, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LFPG", t: 1.24, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LPPT", t: 2.50, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LPPR", t: 2.30, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LROP", t: 1.43, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LRCL", t: 1.24, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LHDC", t: 1.12, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LRSB", t: 1.28, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "OERK", t: 4.41, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LYBE", t: 1.14, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "WSSS", t: 11.29, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "FACT", t: 10.33, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "FAOR", t: 9.51, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "RKSI", t: 9.59, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEAL", t: 2.12, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEBL", t: 1.46, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEBB", t: 1.58, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEMD", t: 2.12, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEMG", t: 2.37, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEZL", t: 2.39, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LEVC", t: 2.04, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "ESGG", t: 1.34, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "ESSA", t: 1.54, ac: "A321 - 200", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LSGG", t: 1.03, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "VTBS", t: 10.18, ac: "A380 - 800", fuel: "194.590t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "DTTA", t: 2.00, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "LTFM", t: 2.11, ac: "A320 - 200", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "OMDB", t: 5.35, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EGBB", t: 1.43, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EGPH", t: 1.59, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "EGLL", t: 1.39, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KBOS", t: 7.17, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KCLT", t: 8.31, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KORD", t: 8.32, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KDEN", t: 10.00, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KLAX", t: 11.13, ac: "A380 - 800", fuel: "194.590t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KMIA", t: 9.20, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KJFK", t: 7.46, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KEWR", t: 7.36, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KSFO", t: 10.52, ac: "A380 - 800", fuel: "194.590t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KSEA", t: 9.46, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "KIAD", t: 7.57, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+
+// Сезонные (Желтые / Seasonal Route)
+{ al: "Lufthansa", d: "EDDM", a: "CYVR", t: 9.37, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "CYYZ", t: 7.47, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "KSAN", t: 11.04, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "LEAL", t: 2.11, ac: "A321 - 200", fuel: "19.640t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.18, ac: "A320 neo", fuel: "16.200t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "ENBR", t: 2.08, ac: "A319", fuel: "14.100t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "LEZL", t: 2.39, ac: "A320", fuel: "16.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "EDXW", t: 1.22, ac: "CRJ900", fuel: "7.950t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "LEMH", t: 1.49, ac: "CRJ900", fuel: "7.950t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "EGJJ", t: 1.43, ac: "CRJ900", fuel: "7.950t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "FACT", t: 10.33, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "EFKT", t: 3.07, ac: "A320neo", fuel: "16.200t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "EFRO", t: 2.56, ac: "A320", fuel: "16.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "EFKS", t: 3.00, ac: "A320", fuel: "16.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.20, ac: "A321", fuel: "19.640t", s: "Seasonal Route" },
+
+// Приостановленные (Красные / Suspended)
+{ al: "Lufthansa", d: "EDDM", a: "UUDD", t: 2.44, ac: "A320", fuel: "16.000t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "ULLI", t: 2.27, ac: "A319", fuel: "14.100t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "UKBB", t: 2.08, ac: "E195", fuel: "9.700t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "UKLL", t: 1.25, ac: "CRJ900", fuel: "7.950t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "UKOO", t: 2.03, ac: "A319", fuel: "14.100t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "OIIE", t: 4.22, ac: "A330 - 300", fuel: "83.400t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "OLBA", t: 3.21, ac: "A321", fuel: "19.640t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "OTHH", t: 5.12, ac: "A330 - 300", fuel: "83.400t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "LTAC", t: 2.38, ac: "A319", fuel: "14.100t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "EETN", t: 2.07, ac: "A319", fuel: "14.100t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "EPKT", t: 1.01, ac: "CRJ900", fuel: "7.950t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "EPLL", t: 1.07, ac: "CRJ900", fuel: "7.950t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "WMKK", t: 11.30, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "WIII", t: 12.48, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "OOMS", t: 5.53, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "ZYTX", t: 9.30, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "ZSQD", t: 9.47, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
+{ al: "Lufthansa", d: "EDDM", a: "RKPK", t: 10.28, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
         ],
         COORDS: {
             "EDDF":[50.03,8.56], "EDDM":[48.35,11.77], "LSZH":[47.45,8.55], "LOWW":[48.11,16.56], "EKCH":[55.61,12.65], "EGLL":[51.47,-0.45], "KJFK":[40.64,-73.77], "KLAX":[33.94,-118.40], "WSSS":[1.36,103.99], "VTBS":[13.69,100.75], "LFPG":[49.00,2.55], "KEWR":[40.68,-74.17], "EVRA":[56.92,23.97], "EDDL":[51.28,6.76], "LEPA":[39.55,2.73], "FIMP":[-20.43,57.68], "MCO":[28.43,-81.30], "VHHH":[22.30,113.91], "EDDP":[51.42,12.23], "KCVG":[39.04,-84.66], "LIRF":[41.80,12.24], "EFHK":[60.31,24.96], "RJTT":[35.54,139.77], "ENGM":[60.19,11.10], "CUN":[21.04,-86.87], "LTAI":[36.89,30.80], "LIPZ":[45.50,12.35], "EBBR":[50.90,4.48], "CPT":[-33.97,18.60], "EDDH":[53.63,9.98], "NCE":[43.66,7.21], "BGO":[60.29,5.21], "OMDB":[25.25,55.36]
