Update seasonal route status in index.html

--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
 { al: "Lufthansa", d: "EDDM", a: "KIAD", t: 7.57, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
 
 // Сезонные (Желтые / Seasonal Route)
-{ al: "Lufthansa", d: "EDDM", a: "CYVR", t: 9.37, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "CYYZ", t: 7.47, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "CYVR", t: 9.37, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "CYYZ", t: 7.47, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal" },
 { al: "Lufthansa", d: "EDDM", a: "KSAN", t: 11.04, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
 { al: "Lufthansa", d: "EDDM", a: "LEAL", t: 2.11, ac: "A321 - 200", fuel: "19.640t", s: "Seasonal Route" },
 { al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.18, ac: "A320 neo", fuel: "16.200t", s: "Seasonal Route" },
