Update seasonal routes for Lufthansa flights

--- a/index.html
+++ b/index.html
@@ -541,19 +541,19 @@
 // Сезонные (Желтые / Seasonal Route)
 { al: "Lufthansa", d: "EDDM", a: "CYVR", t: 9.37, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal" },
 { al: "Lufthansa", d: "EDDM", a: "CYYZ", t: 7.47, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal" },
-{ al: "Lufthansa", d: "EDDM", a: "KSAN", t: 11.04, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "LEAL", t: 2.11, ac: "A321 - 200", fuel: "19.640t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.18, ac: "A320 neo", fuel: "16.200t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "ENBR", t: 2.08, ac: "A319", fuel: "14.100t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "LEZL", t: 2.39, ac: "A320", fuel: "16.000t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "EDXW", t: 1.22, ac: "CRJ900", fuel: "7.950t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "LEMH", t: 1.49, ac: "CRJ900", fuel: "7.950t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "EGJJ", t: 1.43, ac: "CRJ900", fuel: "7.950t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "FACT", t: 10.33, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "EFKT", t: 3.07, ac: "A320neo", fuel: "16.200t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "EFRO", t: 2.56, ac: "A320", fuel: "16.000t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "EFKS", t: 3.00, ac: "A320", fuel: "16.000t", s: "Seasonal Route" },
-{ al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.20, ac: "A321", fuel: "19.640t", s: "Seasonal Route" },
+{ al: "Lufthansa", d: "EDDM", a: "KSAN", t: 11.04, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "LEAL", t: 2.11, ac: "A321 - 200", fuel: "19.640t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.18, ac: "A320 neo", fuel: "16.200t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "ENBR", t: 2.08, ac: "A319", fuel: "14.100t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "LEZL", t: 2.39, ac: "A320", fuel: "16.000t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "EDXW", t: 1.22, ac: "CRJ900", fuel: "7.950t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "LEMH", t: 1.49, ac: "CRJ900", fuel: "7.950t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "EGJJ", t: 1.43, ac: "CRJ900", fuel: "7.950t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "FACT", t: 10.33, ac: "A350 - 900", fuel: "83.000t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "EFKT", t: 3.07, ac: "A320neo", fuel: "16.200t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "EFRO", t: 2.56, ac: "A320", fuel: "16.000t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "EFKS", t: 3.00, ac: "A320", fuel: "16.000t", s: "Seasonal" },
+{ al: "Lufthansa", d: "EDDM", a: "ENTC", t: 3.20, ac: "A321", fuel: "19.640t", s: "Seasonal" },
 
 // Приостановленные (Красные / Suspended)
 { al: "Lufthansa", d: "EDDM", a: "UUDD", t: 2.44, ac: "A320", fuel: "16.000t", s: "Suspended" },
