--- a/index.html
+++ b/index.html
@@ -574,6 +574,144 @@
 { al: "Lufthansa", d: "EDDM", a: "ZYTX", t: 9.30, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
 { al: "Lufthansa", d: "EDDM", a: "ZSQD", t: 9.47, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
 { al: "Lufthansa", d: "EDDM", a: "RKPK", t: 10.28, ac: "A340-200", fuel: "82.790t", s: "Suspended" },
+
+ // --- Lufthansa Frankfurt (EDDF) ---
+
+{ al: "Lufthansa", d: "EDDF", a: "LATI", t: 2.05, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "DAAG", t: 2.17, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "FNLU", t: 8.26, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "SAEZ", t: 14.08, ac: "B747 - 8", fuel: "98.5t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "UDYZ", t: 4.10, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LOWS", t: 1.00, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LOWW", t: 1.24, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "UBBB", t: 4.30, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EBBR", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LQSA", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "SBKP", t: 12.03, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "SBGL", t: 11.54, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "SBGR", t: 12.12, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LBSF", t: 2.12, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "CYYZ", t: 8.14, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "CYVR", t: 10.24, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ZBAA", t: 10.15, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ZUUU", t: 10.09, ac: "B777F", fuel: "109.150t"", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ZSPD", t: 11.05, ac: "B747 - 400", fuel: "121.800t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ZHCC", t: 10.14, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "SKBO", t: 11.31, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "MROC", t: 11.51, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LDZA", t: 1.26, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LCLK", t: 3.45, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LKPR", t: 0.55, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EKBI", t: 1.25, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EKCH", t: 1.12, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "HECA", t: 4.04, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EETN", t: 2.26, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EFHK", t: 2.26, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EFIV", t: 3.08, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EFKS", t: 3.00, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EFRO", t: 2.52, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LFLL", t: 1.09, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LFML", t: 1.20, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LFRS", t: 1.26, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LFMN", t: 1.20, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LFPG", t: 1.10, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LFBO", t: 1.32, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EDDB", t: 1.01, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EDDM", t: 0.50, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LGAV", t: 2.46, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "VHHH", t: 11.46, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LHBP", t: 1.29, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "BIKF", t: 3.32, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "VOBL", t: 9.18, ac: "B747 - 400", fuel: "121.800t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "VOMM", t: 9.40, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "VIDP", t: 7.57, ac: "B747 - 400", fuel: "121.800t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "VOHS", t: 9.02, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "VABB", t: 8.53, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EIDW", t: 1.53, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LLBG", t: 4.04, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LIPE", t: 1.21, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LICC", t: 2.21, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LIML", t: 1.13, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LIMC", t: 1.12, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LIRN", t: 1.56, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LICJ", t: 2.12, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LIRF", t: 1.46, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LIPZ", t: 1.16, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "RJTT", t: 11.56, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "OIAI", t: 5.09, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "HKJK", t: 8.08, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EVRA", t: 2.07, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EYVI", t: 2.00, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LMML", t: 2.31, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "MMGL", t: 12.09, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "MMSM", t: 11.59, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "MMMX", t: 12.00, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "MMMY", t: 11.25, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LUKK", t: 2.18, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "GMMN", t: 3.09, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EHAM", t: 1.10, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "DNAA", t: 6.07, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "DNMM", t: 6.24, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LWSK", t: 2.06, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ENBR", t: 2.05, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ENGM", t: 1.48, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ENZV", t: 1.54, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ENTC", t: 3.11, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EPBY", t: 1.30, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EPGD", t: 1.39, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EPKT", t: 1.30, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EPKK", t: 1.26, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EPPO", t: 1.16, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EPWA", t: 1.42, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LPFR", t: 2.51, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LPPT", t: 2.41, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LPPR", t: 2.21, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LROP", t: 2.15, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "OERK", t: 5.39, ac: "A340 - 600", fuel: "116.600t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LYBE", t: 1.45, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "WSSS", t: 12.55, ac: "B747 - 400", fuel: "121.800t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LJLJ", t: 1.15, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "FACT", t: 11.53, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "FAOR", t: 11.06, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "RKSI", t: 11.03, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEAL", t: 2.16, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEBL", t: 1.50, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEBB", t: 1.48, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEMD", t: 2.12, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEMG", t: 2.38, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEPA", t: 1.55, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEZL", t: 2.40, ac: "A321 neo", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LEVC", t: 2.05, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ESGG", t: 1.26, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ESSA", t: 1.52, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LSGG", t: 1.04, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "DTTA", t: 2.25, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "LTFM", t: 2.45, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "OMDB", t: 6.39, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "OMDW", t: 6.19, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EGBB", t: 1.34, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EGPH", t: 1.52, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EGPF", t: 1.54, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EGLL", t: 1.35, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EGCC", t: 1.38, ac: "A319", fuel: "14.100t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "EGNT", t: 1.42, ac: "CRJ900", fuel: "7.950t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KATL", t: 9.35, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KAUS", t: 10.43, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KBOS", t: 7.41, ac: "A340 - 600", fuel: "116.600t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KORD", t: 9.05, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KDFW", t: 10.25, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KDEN", t: 10.33, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KDTW", t: 8.33, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KIAH", t: 10.38, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KLAX", t: 12.00, ac: "B747 - 8", fuel: "98.5t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KMIA", t: 9.55, ac: "B747 - 8", fuel: "98.5t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KJFK", t: 8.15, ac: "A340 - 600", fuel: "116.600t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KEWR", t: 8.04, ac: "B747 - 8", fuel: "98.5t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KRDU", t: 8.48, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KSFO", t: 11.37, ac: "B747 - 8", fuel: "98.5t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KSEA", t: 10.29, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KSTL", t: 9.24, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "KIAD", t: 8.26, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
         ],
         COORDS: {
             "EDDF":[50.03,8.56], "EDDM":[48.35,11.77], "LSZH":[47.45,8.55], "LOWW":[48.11,16.56], "EKCH":[55.61,12.65], "EGLL":[51.47,-0.45], "KJFK":[40.64,-73.77], "KLAX":[33.94,-118.40], "WSSS":[1.36,103.99], "VTBS":[13.69,100.75], "LFPG":[49.00,2.55], "KEWR":[40.68,-74.17], "EVRA":[56.92,23.97], "EDDL":[51.28,6.76], "LEPA":[39.55,2.73], "FIMP":[-20.43,57.68], "MCO":[28.43,-81.30], "VHHH":[22.30,113.91], "EDDP":[51.42,12.23], "KCVG":[39.04,-84.66], "LIRF":[41.80,12.24], "EFHK":[60.31,24.96], "RJTT":[35.54,139.77], "ENGM":[60.19,11.10], "CUN":[21.04,-86.87], "LTAI":[36.89,30.80], "LIPZ":[45.50,12.35], "EBBR":[50.90,4.48], "CPT":[-33.97,18.60], "EDDH":[53.63,9.98], "NCE":[43.66,7.21], "BGO":[60.29,5.21], "OMDB":[25.25,55.36]
