--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 { al: "Lufthansa", d: "EDDF", a: "CYYZ", t: 8.14, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "CYVR", t: 10.24, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "ZBAA", t: 10.15, ac: "B777F", fuel: "109.150t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "ZUUU", t: 10.09, ac: "B777F", fuel: "109.150t"", s: "Active" },
+{ al: "Lufthansa", d: "EDDF", a: "ZUUU", t: 10.09, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "ZSPD", t: 11.05, ac: "B747 - 400", fuel: "121.800t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "ZHCC", t: 10.14, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "SKBO", t: 11.31, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
