--- a/index.html
+++ b/index.html
@@ -444,6 +444,20 @@
             { id: "A223", t: "Airbus A220-300", op: "AirBaltic", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "A223", t: "Airbus A220-300", op: "ITA Airways", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "A223", t: "Airbus A220-300", op: "Swiss", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
+            { id: "A319", t: "Airbus A319-100", op: "Lufthansa", s: 138, r: "5h 00m", fuel: "14.100t", cat: "138" },
+            { id: "A320", t: "Airbus A320-200", op: "Lufthansa", s: 168, r: "6h 00m", fuel: "16.000t", cat: "168" },
+            { id: "A320N", t: "Airbus A320neo", op: "Lufthansa", s: 180, r: "6h 30m", fuel: "16.200t", cat: "180" },
+            { id: "A321", t: "Airbus A321-200", op: "Lufthansa", s: 205, r: "5h 50m", fuel: "19.640t", cat: "205" },
+            { id: "A21N", t: "Airbus A321neo", op: "Lufthansa", s: 215, r: "7h 30m", fuel: "19.640t", cat: "215" },
+            { id: "CRJ9", t: "Bombardier CRJ-900", op: "Lufthansa CityLine", s: 90, r: "3h 30m", fuel: "7.950t", cat: "90" },
+            { id: "A333", t: "Airbus A330-300", op: "Lufthansa", s: 255, r: "11h 30m", fuel: "83.400t", cat: "255" },
+            { id: "A343", t: "Airbus A340-300", op: "Lufthansa", s: 279, r: "13h 30m", fuel: "", cat: "279" },
+            { id: "A346", t: "Airbus A340-600", op: "Lufthansa", s: 297, r: "14h 30m", fuel: "", cat: "297" },
+            { id: "A359", t: "Airbus A350-900", op: "Lufthansa", s: 293, r: "15h 00m", fuel: "83.000t", cat: "293" },
+            { id: "B744", t: "Boeing 747-400", op: "Lufthansa", s: 371, r: "13h 00m", fuel: "", cat: "371" },
+            { id: "B748", t: "Boeing 747-8I", op: "Lufthansa", s: 364, r: "14h 00m", fuel: "98.5t", cat: "364" },
+            { id: "B789", t: "Boeing 787-9", op: "Lufthansa", s: 294, r: "14h 00m", fuel: "", cat: "294" },
+            { id: "B77L", t: "Boeing 777F", op: "Lufthansa Cargo", s: 0, r: "10h 30m", fuel: "", cat: "Cargo" },
 
         ],
         ROUTES: [
@@ -587,16 +601,16 @@
 { al: "Lufthansa", d: "EDDF", a: "UBBB", t: 4.30, ac: "A321 neo", fuel: "19.640t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EBBR", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "LQSA", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "SBKP", t: 12.03, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "SBKP", t: 12.03, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "SBGL", t: 11.54, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "SBGR", t: 12.12, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "LBSF", t: 2.12, ac: "A320", fuel: "16.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "CYYZ", t: 8.14, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "CYVR", t: 10.24, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "ZBAA", t: 10.15, ac: "B777F", fuel: "109.150t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "ZUUU", t: 10.09, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "ZBAA", t: 10.15, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "ZUUU", t: 10.09, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "ZSPD", t: 11.05, ac: "B747 - 400", fuel: "121.800t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "ZHCC", t: 10.14, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "ZHCC", t: 10.14, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "SKBO", t: 11.31, ac: "B787 - 9", fuel: "76.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "MROC", t: 11.51, ac: "A340 - 200", fuel: "83.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "LDZA", t: 1.26, ac: "CRJ900", fuel: "7.950t", s: "Active" },
@@ -643,10 +657,10 @@
 { al: "Lufthansa", d: "EDDF", a: "EVRA", t: 2.07, ac: "A320", fuel: "16.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EYVI", t: 2.00, ac: "A320", fuel: "16.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "LMML", t: 2.31, ac: "A321", fuel: "19.640t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "MMGL", t: 12.09, ac: "B777F", fuel: "109.150t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "MMSM", t: 11.59, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "MMGL", t: 12.09, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "MMSM", t: 11.59, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "MMMX", t: 12.00, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "MMMY", t: 11.25, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "MMMY", t: 11.25, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "LUKK", t: 2.18, ac: "A319", fuel: "14.100t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "GMMN", t: 3.09, ac: "A320 neo", fuel: "16.200t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EHAM", t: 1.10, ac: "A320", fuel: "16.000t", s: "Active" },
@@ -659,7 +673,7 @@
 { al: "Lufthansa", d: "EDDF", a: "ENTC", t: 3.11, ac: "A321", fuel: "19.640t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EPBY", t: 1.30, ac: "CRJ900", fuel: "7.950t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EPGD", t: 1.39, ac: "A319", fuel: "14.100t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "EPKT", t: 1.30, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "EPKT", t: 1.30, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EPKK", t: 1.26, ac: "A321", fuel: "19.640t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EPPO", t: 1.16, ac: "CRJ900", fuel: "7.950t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EPWA", t: 1.42, ac: "A320", fuel: "16.000t", s: "Active" },
@@ -688,7 +702,7 @@
 { al: "Lufthansa", d: "EDDF", a: "DTTA", t: 2.25, ac: "A321", fuel: "19.640t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "LTFM", t: 2.45, ac: "A320 neo", fuel: "16.200t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "OMDB", t: 6.39, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
-{ al: "Lufthansa", d: "EDDF", a: "OMDW", t: 6.19, ac: "B777F", fuel: "109.150t", s: "Active" },
+{ al: "Lufthansa Cargo", d: "EDDF", a: "OMDW", t: 6.19, ac: "B777F", fuel: "109.150t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EGBB", t: 1.34, ac: "A319", fuel: "14.100t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EGPH", t: 1.52, ac: "A320 neo", fuel: "16.200t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "EGPF", t: 1.54, ac: "A320", fuel: "16.000t", s: "Active" },
