--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
 <script>
 const DB = {
         PILOTS: [
-            { id: "DLH001", pwd: "1234", name: "Nikita", rank: "Manager", base: "EDDF" },
-            { id: "DLH002", pwd: "1234", name: "Loui", rank: "Leader", base: "EDDM" },
+            { id: "GERMAN", pwd: "1234", name: "Nikita", rank: "Manager", base: "EDDF" },
+            { id: "FRENCH", pwd: "1234", name: "Loui", rank: "Leader", base: "EDDM" },
             { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
             { id: "LX088", pwd: "1234", name: "Evgeny", rank: "Pilot", base: "LSZH" },
             { id: "LX088", pwd: "1234", name: "Mikhail", rank: "Pilot", base: "LSZH" },
@@ -418,6 +418,7 @@ const DB = {
             { id: "LX088", pwd: "1234", name: "Zlodey", rank: "Pilot", base: "LSZH" },
             { id: "LX088", pwd: "1234", name: "Vladimir", rank: "Pilot", base: "LSZH" },
             { id: "LX088", pwd: "1234", name: "Vlad", rank: "Pilot", base: "LSZH" },
+            { id: "FINNISH", pwd: "1234", name: "Dobrynya", rank: "Pilot", base: "LSZH" },
         
         ],
 
