--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ const DB = {
             "LOWW": ["C31", "C33", "C35", "C37", "C39", "C41", "D21", "D23", "D25", "D27", "D29", "F01", "F03", "F05", "F07", "F09", "F11", "F13", "F15", "F21", "F23", "F27", "F31", "F33", "F35", "G01", "G03", "G11", "G15", "G21"]
         },
 
-        NEWS: [ { t: "Lufthansa Helper 2.0", d: "Lufthansa Group first web site up to date." }, { t: "New VK post out now", d: "Lufthansa Group comunity posted a new post." } ],
+        NEWS: [ { t: "Lufthansa Helper 2.0", d: "Lufthansa Group first web site up to date." }, { t: "New VK post out now", d: "Lufthansa Group community posted a new post." } ],
         
         FLEET: [
             { id: "A223", t: "Airbus A220-300", op: "AirBaltic", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
