--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ const DB = {
 { al: "Lufthansa", d: "EDDM", a: "VTBS", t: 10.18, ac: "A380 - 800", fuel: "194.590t", s: "Active" },
 { al: "Lufthansa", d: "EDDM", a: "DTTA", t: 2.00, ac: "A321 neo", fuel: "19.640t", s: "Active" },
 { al: "Lufthansa", d: "EDDM", a: "LTFM", t: 2.11, ac: "A320 - 200", fuel: "16.000t", s: "Active" },
-{ al: "Lufthansa", d: "EDDM", a: "OMDB", t: 5.35, ac: "A350 - 900", fuel: "83.000t", s: "Active" },
+{ al: "Lufthansa", d: "EDDM", a: "OMDB", t: 5.35, ac: "A359", fuel: "83.000t", s: "Active" },
 { al: "Lufthansa", d: "EDDM", a: "EGBB", t: 1.43, ac: "A319", fuel: "14.100t", s: "Active" },
 { al: "Lufthansa", d: "EDDM", a: "EGPH", t: 1.59, ac: "A320 neo", fuel: "16.200t", s: "Active" },
 { al: "Lufthansa", d: "EDDM", a: "EGLL", t: 1.39, ac: "A320 neo", fuel: "16.200t", s: "Active" },
